          06-09-01  Bfo     consio      : Problem with empty console reading for MacOS9 fixed

          06-09-01  Bfo     intcommand  : Old PtoC bridge stuff eliminated
          06-09-03  Bfo     os9exec_nt  : "ftp put" hanger fixed: test cp->masklevel <= 0
          06-09-03  Bfo     consio      : Some more small <devReady> adaption for MacOS9/Windows
          06-09-03  Bfo     procstuff   : No mask levels below 0 any more
          06-09-03  Bfo     funcdispatch: STIM_ORDERED 0x0020 added
                                          "systime -h" will show the highest tick count first
          
    3.33  06-??-??  Bfo
    -------------------  
*/



/* unresolved bugs: */
/*
    !!  "_" name convention on Windows (hawk_C0).
    
    -   MPW uses its I/O currently partly also for the tty/pty system.
    -   "mgencas" will not startup over network (Linux), "mme" has also problems.
    -   Linux telnet close still quits emulator (recognition of end cond not correctly)
    -   "inetd" superdaemon is not yet running correctly.
    -   A$AtDate restricted to 248 days / will not adjust when system time changes
    -   Deadlocking MGR when too small DEFAULTPTYSZ 

   (+)  Take tty00/pty00 first (problems with arbitration)
   (+)  setime_Y2K version with param passing --> 1900
*/


/* To do: */
/*
    -   RBF: do read only, if write larger than a sector
    -   SCSI subsystem for Linux
    -   direct line editing on Linux (over network)
    -   gs_ready Linux for CR
    -   Faster directory read (Windows)
    -   Implement internal command "ls" in UNIX style: "ls -la".
    -   <in_recursion> for debug load
    -   btree optimisation
    -   termcap support for the DOS window.
    -   "OS9Boot" will be loaded by name, not by reference on RBF images
    -   paging for SCF devices
    -   tab expansion for SCF devices

   (+)  return  of d1.l from pipe-systasks
   (+)  passing of d2.l to   pipe-open
*/